--- a/playbook.yaml
+++ b/playbook.yaml
@@ -44,7 +44,7 @@
     - name: Add EC2 instance to the host group
       add_host:
         name: "{{ ec2_ip }}"
-        ansible_ssh_private_key_file: {{ pemFile }}
+        ansible_ssh_private_key_file: "{{ pemFile }}"
         ansible_user: "ubuntu"
 
     - name: Wait for EC2 instance to be ready for SSH
